Clean up project code